array cardio day 1 Finished

--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -65,18 +65,41 @@
 
 
     // 5. Sort the inventors by years lived
+    const lived = inventors.sort((a, b) => {
+      const first = (a.passed - a.year)
+      const last = (b.passed - b.year)
+      return last - first;
+    })
+    console.table(lived)
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+    // const category = document.querySelector('.mw-category');
+    // const links = Array.from(category.querySelectorAll('a'));
+    // const test = links.map(link => link.textContent
+    // )
+    // const end = test.filter(word => word.toLocaleLowerCase().includes('de'));
+    // console.table(end);
+
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const sorted = people.sort((a, b) => {
+      const secondWordA = a.split(', ')[1];
+      const secondWordB = b.split(', ')[1];
+      return secondWordA.localeCompare(secondWordB);
+    })
+    console.log(sorted);
 
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck'];
-
+    const reduced = data.reduce((acc, car) => {
+      acc[car] = (acc[car] || 0) + 1;
+      return acc;
+    }, {});
+    console.table(reduced);
   </script>
 </body>
 
